2002-03-04  Robert Collins  <rbtcollins@hotmail.com>

	* cygserver_shm.cc (client_request_shm::serve): Implement SHM_DETACH.
	* shm.cc (shmdt): Implement.

2002-03-04  Robert Collins  <rbtcollins@hotmail.com>

	* cygserver_shm.cc: Run indent.
	(deleted_head): New global for storing shm id's pending deletion.
	(client_request_shm::serve): Return ENOSYS for invalid request types.
	Implement SHM_DEL - delete a shm id.
	* cygserver_shm.h (SHM_DEL): New type value.
	* shm.cc (delete_inprocess_shmds): New function, does what it's name implies.
	(shmctl): Implement shm_rmid control type.

2002-03-04  Robert Collins  <rbtcollins@hotmail.com>

	* Makefile.in (install): Remove install-bin to allow make install to work.

2002-03-03  Robert Collins  <rbtcollins@hotmail.com>

	* shm.cc (shmat): Prevent a compile error.
	(shmdt): Set errno as this function is incomplete.

2002-02-28  Christopher Faylor  <cgf@redhat.com>

	* times.cc: Remove if 0'd code.  Clean up slightly.

2002-02-28  Robert Collins  <rbtcollins@hotmail.com>

	* Merged cygwin_daemon into head minus the new shm and ipc exports.

2002-02-28  Robert Collins  <rbtcollins@hotmail.com>

	* fhandler_tty.cc (fhandler_tty_slave::open): More debugging.
	(fhandler_tty_slave::read): Fix printf type for the handle.
	* tty.cc (tty::common_init): Add a FIXME for security.

2002-01-29  Robert Collins  <rbtcollins@hotmail.com>

	* Makefile.in (OBJS): Remove duplicate localtime.o.

2002-01-17  Robert Collins  <rbtcollins@hotmail.com>

	* cygserver.cc (check_and_dup_handle): Consolidate the two variants for 
	simplicity.
	Add Some basic debug output.
	(client_request_attach_tty::serve): Use the new debug_printf for clarity.
	Mark the duplicated handles as inheritable - fixup_after_fork() doesn't reopen
	tty's.

2002-01-16  Robert Collins  <rbtcollins@hotmail.com>

	* cygserver.cc (transport): Correct scope.
	(client_request_attach_tty::serve): Add more debug information.
	Fix erroneous use of transport instead of conn.